# ResearchAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  REFACTOR_README.md  agent_eval_checklist.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml
configs/: agent.yaml  rag.yaml
docs/: claim-evidence-mapping-hardening.md  dynamic-research-os-migration-plan.en.md  dynamic-research-os-migration-plan.md  dynamic-research-os-phase-roadmap.en.md  dynamic-research-os-phase-roadmap.md  dynamic-research-os-prd.en.md  dynamic-research-os-prd.md  final-no-regression-remediation-plan.md  phase0-contracts.en.md  run-20260223-115419-issues-and-fixes.md  ui-requirements.md
frontend/: README.md  app.py  index.html  metadata.json
scripts/: build_index.py  dynamic_os_mcp_server.py  fetch_arxiv.py  run_agent.py  smoke_test.py  validate_run_outputs.py
tests/: test_app_model_catalogs.py  test_budget_guard.py  test_core_config.py  test_core_events.py  test_core_schemas.py  test_default_search_pdf_policy.py  test_dynamic_os_hitl.py  test_dynamic_os_phase1.py  test_dynamic_os_phase2.py  test_dynamic_os_phase3.py  test_executor.py  test_experiment_reviewer.py  test_factories_and_providers.py  test_failure_router.py  test_figure_captioner.py  test_figure_extractor.py  test_gemini_llm_backend.py  test_graph_runtime.py  test_latex_loader.py  test_nodes_flow.py  test_nodes_helpers.py  test_pdf_loader_marker.py  test_phase1_artifacts.py  test_phase3_contracts.py  test_phase5_artifacts.py  test_phase5_orchestrator.py  (+16 more)
(+312 files in other folders)
